ubuntu-release-upgrader (1:19.04.15) disco; urgency=medium

  * debian/control: build depend on the new version of update-manager which
    supports checking to see if an https url is downloadable. (LP: #1823410)
  * tests/test_sources.list.py: add a test for https support.
  * Update of demotions and mirrors data.

 -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2019 12:18:40 -0700

ubuntu-release-upgrader (1:19.04.14) disco; urgency=medium

  * DistUpgradeController.py: Instead of checking every sources.list entry to
    see if they are accessible keep track of the uris and only test once per
    uri thereby preventing situations where entries for the same server are
    enabled and disabled. (LP: #1822886)
  * Update of demotions and mirrors data.

 -- Brian Murray <brian@ubuntu.com>  Thu, 04 Apr 2019 17:06:26 -0700

ubuntu-release-upgrader (1:19.04.13) disco; urgency=medium

  [ Brian Murray ]
  * Add a lintian override for unsafe symlinks after removing some crufty
    symlinks.

  [ Dimitri John Ledkov ]
  * Fix up minor lintian warnings.
  * Trick dh_python3 into processing script, in a non-standard location.

 -- Brian Murray <brian@ubuntu.com>  Thu, 14 Mar 2019 10:41:34 -0700

ubuntu-release-upgrader (1:19.04.12) disco; urgency=medium

  * DistUpgradeController.py: Check to see if the current release is an LTS
    before warning that livepatch will be disabled. Thanks to Andrea Azzarone
    for the patch. (LP: #1816423)
  * pre-build.sh: run tests first because those are quicker than updating
    mirrors and demotions.

 -- Brian Murray <brian@ubuntu.com>  Fri, 08 Mar 2019 10:59:32 -0800

ubuntu-release-upgrader (1:19.04.11) disco; urgency=medium

  * do-release-upgrade: fix typo of development. (LP: #1813470)

 -- Brian Murray <brian@ubuntu.com>  Tue, 26 Feb 2019 13:37:50 -0800

ubuntu-release-upgrader (1:19.04.10) disco; urgency=medium

  [ Andrea Azzarone ]
  * DistUpgrade/DistUpgradeView.py,
    DistUpgrade/DistUpgradeViewGtk3.py,