@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:19.04.15) disco; urgency=medium
     supports checking to see if an https url is downloadable. (LP: #1823410)
   * tests/test_sources.list.py: add a test for https support.
   * Update of demotions and mirrors data.
+  * DistUpgrade/DistUpgradeQuirks.py: update the deb2snap quirk for disco,
+    bump the version of gnome snap, and include the core18 snap.
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2019 12:18:40 -0700
 
